# emoji_writer

./: .gitignore  Dockerfile  Dockerfile.server  Makefile  README.md  app.py  emoji_writer.py  letters.py  main.py  pyproject.toml  requirements.txt  setup.py  slack_emoji_list.txt
.github/workflows/: black-isort.yml  docker-build-and-test.yml  push-image-prod.yml  run-tests.yml
dockerfiles/: Dockerfile  Dockerfile.server  Dockerfile.test_package
emoji_writer/: __init__.py  emoji_writer.py  groups.py  letters.py  writer.py
scripts/: app.py  main.py
test/: test_emoji_writter.py  test_groups.py  test_letters.py  test_writer.py
